--- a/app/views/sousarticles/_sousarticle.html.erb
+++ b/app/views/sousarticles/_sousarticle.html.erb
@@ -1,11 +1,11 @@
-<div id="<%= dom_id sousarticle %>">
+<div id="<%= dom_id sousarticle %>" class="card mb-2 p-2">
     <%#= sousarticle.article_id %>
     <%#= sousarticle.produit_id %>
 
     <div class="row d-flex align-items-center">
 
       <div class="col-2 text-center">
-        <%= image_tag(sousarticle.produit.default_image, width: 25) %>  
+        <%= image_tag(sousarticle.produit.default_image, width: 50) %>  
       </div>
 
       <div class="col">
