--- a/app/views/home_admin/_blocLarge.html.erb
+++ b/app/views/home_admin/_blocLarge.html.erb
@@ -14,8 +14,9 @@
         <%= options_supplementaires_link(etiquettes_index_path, "fa-tags", "Etiquettes", "btn-outline-secondary") %>
         <%= options_supplementaires_link(stock_index_path, "fa-box-open", "Stocks", "btn-outline-danger") %>
         <%= options_supplementaires_link(fournisseurs_path, "fa-industry", "Fournisseurs", "btn-outline-dark") %>
-        <%= options_supplementaires_link(root_path, "fa-cubes", "Gestion des Ensembles", "btn-outline-primary") %>
+        <%= options_supplementaires_link(ensembles_path, "fa-cubes", "Gestion des Ensembles", "btn-outline-primary") %>
         <%= options_supplementaires_link(categorie_produits_path, "fa-cubes", "Cat. produits", "btn-outline-dark") %>
+        <%= options_supplementaires_link(type_produits_path, "fa-cubes", "Type. produits", "btn-outline-primary") %>
 
         <%= options_supplementaires_link(couleurs_path, "fa-cubes", "Couleurs", "btn-outline-dark") %>
         <%= options_supplementaires_link(tailles_path, "fa-cubes", "Tailles", "btn-outline-dark") %>
