--- a/app/views/selection_produit/index.html.erb
+++ b/app/views/selection_produit/index.html.erb
@@ -75,18 +75,7 @@
 
 </div>
 
-
-  <div class="container bg-warning">
-    test ensembles <br>
-
-    types produit de la commande : 
-    <%= type_produits_in_commande(@commande) %> <br>
-
-    match: <%= find_ensemble_matching_type_produits(@commande)&.produit&.nom %>
-    
-
-  </div>
-
+<%= render 'ensemble_applicable' %>
 
 
 <br> <br>
