--- a/app/views/ensembles/_ensemble.html.erb
+++ b/app/views/ensembles/_ensemble.html.erb
@@ -4,22 +4,52 @@
 
   <div class="card mx-2 my-3 p-3 light-beige-colored shadow-sm">
 
-    <p>
-      <strong>Parent:</strong>
-      <%= ensemble.produit.nom %>
-    </p>
-
-
-    <p>
-      <strong>Enfant1:</strong>
-      <%= ensemble.type_produit1.nom %>
-    </p>
-
+      <p>
+        <strong>Parent:</strong>
+        <%= ensemble.produit.nom %>
+      </p>
     
-    <p>
-      <strong>Enfant2:</strong>
-      <%= ensemble.type_produit2.nom %>
-    </p>
+    <% if ensemble.type_produit1 %>
+      <p>
+        <strong>Enfant1:</strong>
+        <%= ensemble.type_produit1.nom %>
+      </p>
+    <% end %>
+
+    <% if ensemble.type_produit2 %>
+      <p>
+        <strong>Enfant2:</strong>
+        <%= ensemble.type_produit2.nom %>
+      </p>
+    <% end %>
+
+    <% if ensemble.type_produit3 %>
+      <p>
+        <strong>Enfant3:</strong>
+        <%= ensemble.type_produit3.nom %>
+      </p>
+    <% end %>
+
+    <% if ensemble.type_produit4 %>
+      <p>
+        <strong>Enfant4:</strong>
+        <%= ensemble.type_produit4.nom %>
+      </p>
+    <% end %>
+
+    <% if ensemble.type_produit5 %>
+      <p>
+        <strong>Enfant5:</strong>
+        <%= ensemble.type_produit5.nom %>
+      </p>
+    <% end %>
+
+    <% if ensemble.type_produit6 %>
+      <p>
+        <strong>Enfant6:</strong>
+        <%= ensemble.type_produit6.nom %>
+      </p>
+    <% end %>
 
     <%= links_record(ensemble) %>  
 
