avancement stimulus calculs article avec distinction new et edit

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -22,46 +22,59 @@
     
     <%# test dynamic form %>
 
-    <%= form.hidden_field :produit_id, value: @produit.id if @produit %>
     <%= form.hidden_field :commande_id, value: session[:commande] %>
 
-
-    <div data-controller="form-element">
-      <%= form.button "Validate", formaction: new_article_path, formmethod: :get, 
-          data: { turbo_frame: :content_field, form_element_target: "submitbtn" } %>
+    <div data-controller="form-article">
 
 
-      <div class="container-fluid d-flex">
-        <div class="form-check mx-2">
-          <%= form.radio_button :locvente, "location", checked: (@commande.is_location), class: "form-check-input", 
-              id: "flexRadioDefault1", autocomplete: "off", 
-              data: { action: "change->form-element#remotesubmit" } %>
-          <%= form.label :locvente_location, "Location", class: "form-check-label", for: "flexRadioDefault1" %>
-        </div>
+    <%# reprendre et faire fonctionenr sur edition : 
+      faire if persisted et recuperer si persisted la valeur du produit
+      si ok, essayer plutot de passer par un controller plus propre pour affecter le @produit
+      essayer de passer une valeur @produit depuis controller artcile edit
 
-        <div class="form-check mx-2">
-          <%= form.radio_button :locvente, "vente", checked: (@commande.is_vente), class: "form-check-input", 
-              id: "flexRadioDefault2", autocomplete: "off", 
-              data: { action: "change->form-element#remotesubmit" } %>
-          <%= form.label :locvente_vente, "Vente", class: "form-check-label", for: "flexRadioDefault2" %>
-        </div>
+    %>
+    
+    <% if article.persisted? %>
+        <%= form.hidden_field :prixlocation_initial, value: @produit&.prixlocation,  
+              data: { action: "change->form-article#update_price", form_article_target: "prixlocation_initial" } %>
+        <%= form.hidden_field :prixvente_initial, value: @produit&.prixvente,  
+              data: { action: "change->form-article#update_price", form_article_target: "prixvente_initial" } %>
+
+        <div class="container-fluid d-flex">
+          <div class="input-group input-group-sm my-1">
+            <%= form.label :locvente, "locvente", class: "input-group-text label-colored" %>
+            <%= form.select :locvente, options_for_select(["", "location", "vente"], 
+                  selected: article.locvente), {}, 
+                  data: { action: "change->form-article#change_type_locvente", form_article_target: "type" }, 
+                  class: "form-select input-colored" %>
+          </div>
       </div>
 
-      <%= turbo_frame_tag :content_field do %>
-        val locvente article : <%= article.locvente %> <br>
-        val produit : <%= article.produit_id %>
+    <% else %>
 
-        <div class="form-group input-group mb-1 p-2">
-          <div class="input-group-text">Prix</div>
-            <%# if @produit %>
-              <%= form.number_field :prix,
-                  value: article.locvente == "location" ? @prix_location : @prix_vente ,
-                  class: "form-control", placeholder: "", step: "0.01" %>
-          <%# end %>
-        </div> 
-      
+        <%= form.hidden_field :prixlocation_initial, value: @produit&.prixlocation,  
+              data: { action: "change->form-article#set_initial_price", form_article_target: "prixlocation_initial" } %>
+        <%= form.hidden_field :prixvente_initial, value: @produit&.prixvente,  
+              data: { action: "change->form-article#set_initial_price", form_article_target: "prixvente_initial" } %>
 
-      <% end %>
+        <div class="container-fluid d-flex">
+          <div class="input-group input-group-sm my-1">
+            <%= form.label :locvente, "locvente", class: "input-group-text label-colored" %>
+            <%= form.select :locvente, options_for_select(["location", "vente"], 
+                  selected: @type_locvente), {}, 
+                  data: { action: "change->form-article#set_initial_price", form_article_target: "type" }, 
+                  class: "form-select input-colored" %>
+          </div>
+      </div>
+
+    <% end %>
+
+
+
+      <div class="input-group input-group-sm my-1">
+        <%= form.label :prix, class: "input-group-text fs-6 input-colored" %>
+        <%= form.number_field :prix, data: { form_article_target: "prix" }, class: "form-control label-colored" %>
+      </div>
       
     </div>
 
@@ -84,22 +97,7 @@
         </div>
       </div>
 
-      <%# en fonction de la bascule loc ou vente, changer dynamiquement le prix ou le loyer %>
-
-
-        <%# if @produit %>
-          <div class="form-group input-group mb-1 p-2">
-            <div class="input-group-text">Prix</div>
-            <%#= form.number_field :prix,
-                                  value: (@commande.is_location ? @produit.prixlocation : @produit.prixvente),
-                                  class: "form-control",
-                                  placeholder: "",
-                                  step: "0.01" %>
-          </div>  
-        <%# end %>
-      
-    
-    
+          
     <%= custom_form_elements(form, 
       [:caution, :number_field], [:longueduree, :check_box], [:commentaires, :text_area])
     %>
