--- a/app/views/friends/_form.html.erb
+++ b/app/views/friends/_form.html.erb
@@ -1,48 +1,51 @@
-<%= form_with(model: friend) do |form| %>
-  <% if friend.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(friend.errors.count, "error") %> prohibited this friend from being saved:</h2>
+<div class="p-4">
+  <%= form_with(model: friend) do |form| %>
+    <% if friend.errors.any? %>
+      <div style="color: red">
+        <h2><%= pluralize(friend.errors.count, "error") %> prohibited this friend from being saved:</h2>
 
-      <ul>
-        <% friend.errors.each do |error| %>
-          <li><%= error.full_message %></li>
+        <ul>
+          <% friend.errors.each do |error| %>
+            <li><%= error.full_message %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
+
+
+    <div>
+      <%= form.label :nom, style: "display: block" %>
+      <%= form.text_field :nom %>
+    </div>
+
+
+      <%# test dynamic form %>
+
+      <div data-controller="form-element">
+        <%= form.button "Validate", formaction: new_friend_path, formmethod: :get, 
+            data: { turbo_frame: :content_field, form_element_target: "submitbtn" } %>
+
+        <div>
+          <%= form.label :age, style: "display: block" %>
+          <%= form.number_field :age,
+                data: { action: "change->form-element#remotesubmit" } %>
+        </div>
+        <%= turbo_frame_tag :content_field do %>
+          val age : <%= friend.age %> <br>
+          <%= Time.now %>
         <% end %>
-      </ul>
+        
+      </div>
+
+
+      <%# fin test dynamic form %>
+
+
+
+
+    <div>
+      <%= form.submit %>
     </div>
   <% end %>
 
-
-  <div>
-    <%= form.label :nom, style: "display: block" %>
-    <%= form.text_field :nom %>
-  </div>
-
-
-    <%# test dynamic form %>
-
-    <div data-controller="form-element">
-      <%= form.button "Validate", formaction: new_friend_path, formmethod: :get, 
-          data: { turbo_frame: :content_field, form_element_target: "submitbtn" } %>
-
-      <div>
-        <%= form.label :age, style: "display: block" %>
-        <%= form.number_field :age,
-              data: { action: "change->form-element#remotesubmit" } %>
-      </div>
-    </div>
-
-      <%= turbo_frame_tag :content_field do %>
-        val age : <%= friend.age %> <br>
-        <%= Time.now %>
-      <% end %>
-      
-
-    <%# fin test dynamic form %>
-
-
-
-
-  <div>
-    <%= form.submit %>
-  </div>
-<% end %>
+</div>
