--- a/app/views/produits/_form.html.erb
+++ b/app/views/produits/_form.html.erb
@@ -36,7 +36,7 @@
 
       <%= custom_form_elements(form, 
         [:prixvente, :text_field], [:prixlocation, :text_field],
-        [:description, :text_area], [:caution, :text_field],
+        [:description, :text_area], 
         [:handle, :text_field], [:reffrs, :text_field], [:quantite, :number_field],
         [:fournisseur_id, :text_field], [:dateachat, :date_field], [:prixachat, :text_field]
       ) %>
