base stock avec utilisation du meme helper

--- a/app/views/selection_produit/_produits_filtres.html.erb
+++ b/app/views/selection_produit/_produits_filtres.html.erb
@@ -13,6 +13,8 @@
                         <div class="card-body">
                             <h5 class="card-title"> <%= produit.full_name %> </h5>
                             <p class="card-text"> <%= produit.description %></p>
+
+                            <%= est_disponible(produit) %>
                         </div>
                     </div>
                 </div>
