--- a/app/views/stock/index.html.erb
+++ b/app/views/stock/index.html.erb
@@ -3,9 +3,9 @@
 
 
 <div class="card mx-2 my-3 p-3 light-beige-colored shadow-sm">
-  <p> Total produits : <span class="fw-bold"> <%= total_produits %> </span> </p> 
-  <p> Total loués : <span class="fw-bold"> <%= total_loues %> </span> </p> 
-  <p> Total vendus : <span class="fw-bold"> <%= total_vendus %> </span> </p> 
-  <p> Restant : <span class="fw-bold"> <%= produits_restants %> </span> </p> 
+  <p> Total produits : <span class="fw-bold"> <%= total_produits(@produits) %> </span> </p> 
+  <p> Total loués : <span class="fw-bold"> <%= total_loues(@produits) %> </span> </p> 
+  <p> Total vendus : <span class="fw-bold"> <%= total_vendus(@produits) %> </span> </p> 
+  <p> Restant : <span class="fw-bold"> <%= produits_restants(@produits) %> </span> </p> 
 
 </div>
