ajout de tout selectionner dans filtre selection produit manuelle

--- a/app/views/selection_produit/_categorie_selected.html.erb
+++ b/app/views/selection_produit/_categorie_selected.html.erb
@@ -1,12 +1,27 @@
 <div class="d-flex flex-wrap justify-content-center align-items-center">
-  <% @tailles.each do |taille| %>
-    <%= button_to display_taille_selected_selection_produit_index_path(categorie_produit: @categorie_produit, taille: taille), 
-        class: "btn btn-outline-primary m-2 btn-topic px-4",
-        data: { controller: "button-color", action: "click->button-color#handleClick" },
-        "data-original-color": "text-primary" do %>
-        <span class="ms-1 fw-bold"><%= taille.nom %></span>
+
+  <% if @tailles.any? %>
+
+      <%= button_to display_taille_selected_selection_produit_index_path(
+          categorie_produit: @categorie_produits, taille: "all"), 
+          class: "btn btn-outline-primary m-2 btn-topic px-2",
+          data: { controller: "button-color", action: "click->button-color#handleClick" },
+          "data-original-color": "text-primary" do %>
+          <span class="ms-1 fw-bold">Tout</span>
+      <% end %>
+      
+
+    <% @tailles.each do |taille| %>
+      <%= button_to display_taille_selected_selection_produit_index_path(categorie_produit: @categorie_produits, taille: taille), 
+          class: "btn btn-outline-primary m-2 btn-topic px-2",
+          data: { controller: "button-color", action: "click->button-color#handleClick" },
+          "data-original-color": "text-primary" do %>
+          <span class="ms-1 fw-bold"><%= taille.nom %></span>
+      <% end %>
     <% end %>
+
   <% end %>
+  
 </div>
 
 
