--- a/app/views/selection_produit/_produits_filtres.html.erb
+++ b/app/views/selection_produit/_produits_filtres.html.erb
@@ -1,26 +1,24 @@
-
 <div class="container-fluid m-2 p-2">
+    <% if @produits.any? %>
+        <% @produits.each do |produit| %>
+            <%= link_to selection_produit_path(produit: produit, article: @article) do %>
 
-    <% @produits.each do |produit| %>
-        <%= link_to selection_produit_path(produit: produit, article: @article) do %>
+                <div class="card mb-3">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <%= image_tag(produit.default_image, width: 100) %>
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title"> <%= produit.full_name %> </h5>
+                                <p class="card-text"> <%= produit.description %></p>
 
-            <div class="card mb-3">
-                <div class="row g-0">
-                    <div class="col-md-4">
-                        <%= image_tag(produit.default_image, width: 100) %>
-                    </div>
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <h5 class="card-title"> <%= produit.full_name %> </h5>
-                            <p class="card-text"> <%= produit.description %></p>
-
-                            <%= est_disponible(produit) %>
+                                <%= est_disponible(produit) %>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-
+            <% end %>
         <% end %>
     <% end %>
-
 </div>
