--- a/app/views/selection_produit/_taille_selected.html.erb
+++ b/app/views/selection_produit/_taille_selected.html.erb
@@ -1,14 +1,23 @@
 
 <div class="d-flex flex-wrap justify-content-center align-items-center">
+  <%= button_to display_couleur_selected_selection_produit_index_path(
+      categorie_produit: @categorie_produits, taille: @tailles, couleur: "all"), 
+      class: "btn btn-outline-primary m-2 btn-topic px-4",
+      data: { controller: "button-color", action: "click->button-color#handleClick" },
+      "data-original-color": "text-primary" do %>
+      <span class="ms-1 fw-bold">Tout</span>
+  <% end %>
+
   <% @couleurs.each do |couleur| %>
     <%= button_to display_couleur_selected_selection_produit_index_path(
-        categorie_produit: @categorie_produit, taille: @taille, couleur: couleur), 
+        categorie_produit: @categorie_produits, taille: @tailles, couleur: couleur), 
         class: "btn btn-outline-primary m-2 btn-topic px-4",
         data: { controller: "button-color", action: "click->button-color#handleClick" },
         "data-original-color": "text-primary" do %>
         <span class="ms-1 fw-bold"><%= couleur.nom %></span>
     <% end %>
   <% end %>
+
 </div>
 
 
