--- a/app/views/produits/_produit.html.erb
+++ b/app/views/produits/_produit.html.erb
@@ -3,9 +3,7 @@
   <div class="card mx-2 mb-3 light-beige-colored shadow-sm">
     <div class="row g-0">
       <div class="col-4">
-
-          <%= image_tag(produit.default_image, class: "img-fluid rounded-start")  %>
-
+        <%= image_tag(produit.default_image, class: "img-fluid rounded-start")  %>
       </div>
       <div class="col-4">
         <div class="card-body">
@@ -13,20 +11,13 @@
             <%= produit.nom %>
           </h5>
           <p class="card-text">
-            <p>
-              <strong>Prixvente:</strong>
-              <%= produit.prixvente %>
-            </p>
 
-            <p>
-              <strong>Prixlocation:</strong>
-              <%= produit.prixlocation %>
-            </p>
+            <%= produit.description %>
 
-            <p>
-              <strong>Description:</strong>
-              <%= produit.description %>
-            </p>
+            <%= badge_prixlocation_produit(produit) %>
+            <%= badge_prixvente_produit(produit) %>
+
+            <p class="m-1 mt-3"><%= badge_disponibilite(produit) %> </p> 
           </p>
         </div>
       </div>
@@ -35,9 +26,7 @@
         <div class="card-body">
           <p class="card-text">
             <p>
-              <strong>Couleur:</strong>
-              <%= produit.couleur.nom if produit.couleur %>
-              <p>
+                <%= badge_couleur_produit(produit) %> 
                 Autres couleur(s) : 
                 <% same_reffrs_same_taille_others_couleurs(produit).each do |produit| %>
                   <%= produit.couleur.nom if produit.couleur %>
@@ -46,9 +35,8 @@
             </p>
 
             <p>
-              <strong>Taille:</strong>
-              <%= produit.taille.nom if produit.taille %>           
-              <p>
+              <%= badge_taille_produit(produit) %> 
+
                 Autres taille(s) : 
                 <% same_reffrs_same_couleur_others_tailles(produit).each do |produit| %>
                   <%= produit.taille.nom if produit.taille %>
@@ -70,7 +58,7 @@
           class: "btn btn-sm btn-primary fa fa-eye m-1", "data-bs-toggle": "collapse", 
           role: "button", "aria-expanded": "false", "aria-controls": "collapseProduit#{dom_id(produit)}" %>
 
-                    <%= links_record(produit) %>  
+        <%= links_record(produit) %>  
 
       </div>
 
