--- a/app/views/selection_produit/index.html.erb
+++ b/app/views/selection_produit/index.html.erb
@@ -1,30 +1,24 @@
-<h2 class="text-center mb-4">
 
-  <% if @article %>
-    Sélection sous-article de <%= @article.nom_complet %>    
-  <% else %>
-    Sélection article
-  <% end %>
-  pour commande <%= @commande.ref_commande %>
+<div class="card light-beige-colored shadow-lg">
 
-</h2>
+  <div class="card-header bg-dark text-light text-center fw-bold fs-4">
+    <%= @titre_complet %>
+  </div>
 
-<div class="card p-2">
+  <div class="container-fluid d-flex justify-content-center align-items-center p-2">
 
-  <div class="container-fluid d-flex justify-content-center align-items-center">
+    <%= search_form_for @q, url: selection_produit_path, method: :get, class: "w-100" do |f| %>
 
-    <%= search_form_for @q, url: selection_produit_path, method: :get do |f| %>
-
-      <div class="input-group w-100">
-        <%= f.search_field :nom_or_reffrs_or_couleur_nom_or_taille_nom_cont, class: "form-control", placeholder: 'Chercher...' %>
+      <div class="input-group mt-2">
+        <%= f.search_field :nom_or_reffrs_or_couleur_nom_or_taille_nom_cont, class: "form-control rounded mx-1", placeholder: 'Chercher...' %>
 
         <%= hidden_field_tag 'article', params[:article] if params[:article] %>
 
-        <%= link_to selection_produit_path(article: params[:article]), class: 'btn btn-outline-danger rounded' do %>
+        <%= link_to selection_produit_path(article: params[:article]), class: 'btn btn-outline-danger rounded mx-1' do %>
           <i class="fa fa-xl fa-circle-xmark"></i>
         <% end %>
         
-        <%= f.button class: 'btn btn-outline-success rounded' do %>
+        <%= f.button class: 'btn btn-outline-success rounded mx-1' do %>
           <i class="fa fa-xl fa-search mx-3"></i>
         <% end %>        
       </div>
@@ -37,14 +31,13 @@
     <%= render "selection_produit/produits_filtres" %>
   <% end %>
 
-
   <% unless @produit.present? || params[:q] %>
     <% button_configs = [
       { path: display_qr_selection_produit_index_path, icon: "fa-qrcode", text: "QR code", color: "text-secondary" },
       { path: display_manuelle_selection_produit_index_path(article: @article), icon: "fa-hand", text: "Manuelle", color: "text-secondary" }
     ] %>
 
-    <div class="d-flex flex-wrap justify-content-center align-items-center">
+    <div class="d-flex flex-wrap justify-content-center align-items-center mb-3">
       <% button_configs.each do |config| %>
         <%= button_to config[:path], class: "btn btn-outline-primary m-2 btn-topic m-2 px-4",
           data: { controller: "button-color", action: "click->button-color#handleClick" },
