--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -38,3 +38,12 @@
    width: 90%;
    max-width: 500px;
 }
+
+/* Style the image to fill the container width while maintaining aspect ratio */
+.img-produit {
+   width: 100%;
+   height: 100%;
+   max-height: 300px;
+   object-fit: cover;
+   object-position: center; /* Center the image horizontally when it's taller than the container */
+ }
