--- a/app/views/produits/_produit.html.erb
+++ b/app/views/produits/_produit.html.erb
@@ -1,118 +1,78 @@
 <div id="<%= dom_id produit %>" class="my-2">
-
   <div class="card mx-2 mb-3 light-beige-colored shadow-sm">
-    <div class="row g-0">
-      <div class="col-4">
-        <%= image_tag(produit.default_image, class: "img-fluid rounded-start")  %>
-      </div>
-      <div class="col-4">
-        <div class="card-body">
+    <div class="card-body p-0">
+      <div class="row g-0">
+        <div class="col-4">
+          <%= image_tag(produit.default_image, class: "img-produit")  %>
+        </div>
+        <div class="col-8 d-flex flex-column p-2">
           <h5 class="card-title">
             <%= produit.nom %>
+            <%= link_to "", "#collapseProduit#{dom_id(produit)}", 
+                    class: "btn btn-sm btn-outline-primary fa-solid fa-eye m-1", "data-bs-toggle": "collapse", 
+                    role: "button", "aria-expanded": "false", "aria-controls": "collapseProduit#{dom_id(produit)}" %>
           </h5>
-          <p class="card-text">
-
-            <%= produit.description %>
-
-            <%= badge_prixlocation_produit(produit) %>
-            <%= badge_prixvente_produit(produit) %>
-
-            <p class="m-1 mt-3"><%= badge_disponibilite(produit) %> </p> 
-          </p>
-        </div>
-      </div>
-      
-      <div class="col-4">
-        <div class="card-body">
-          <p class="card-text">
-            <p>
-                <%= badge_couleur_produit(produit) %> 
-                Autres couleur(s) : 
-                <% same_reffrs_same_taille_others_couleurs(produit).each do |produit| %>
-                  <%= produit.couleur.nom if produit.couleur %>
-                <% end %>
-              </p>
-            </p>
 
             <p>
-              <%= badge_taille_produit(produit) %> 
-
-                Autres taille(s) : 
-                <% same_reffrs_same_couleur_others_tailles(produit).each do |produit| %>
-                  <%= produit.taille.nom if produit.taille %>
-                <% end %>
-              </p>        
-            </p>
-
-            <p>
-              <strong>Categorie produit:</strong>
+              <strong>Categorie:</strong>
               <%= produit.categorie_produit.nom if produit.categorie_produit %>
             </p>
 
-          </p>
+            <%= produit.description %>
+
+        <div class="container">
+            <%= badge_prixlocation_produit(produit) %>
+            <%= badge_prixvente_produit(produit) %>
+            <%= badge_couleur_produit(produit) %> 
+            <%= badge_taille_produit(produit) %> 
+            <p class="m-1 mt-3"><%= badge_disponibilite(produit) %> </p> 
         </div>
-      </div>    
-
-      <div class="container"> 
-        <%= link_to "", "#collapseProduit#{dom_id(produit)}", 
-          class: "btn btn-sm btn-primary fa fa-eye m-1", "data-bs-toggle": "collapse", 
-          role: "button", "aria-expanded": "false", "aria-controls": "collapseProduit#{dom_id(produit)}" %>
-
-        <%= links_record(produit) %>  
-
+          <div class="mt-auto">
+            <%= links_record(produit) %>  
+          </div>
+        </div>
       </div>
 
-      <div class="collapse" id="collapseProduit<%= dom_id(produit) %>">
+      <div class="p-2 collapse" id="collapseProduit<%= dom_id(produit) %>">
 
-        <div class="row g-0">
-          <div class="col-4">
-          
             <%= image_tag(produit.qr_code, class:"rounded-start") if produit.qr_code.attached? %>
-          </div>
-          <div class="col-4">
-            <p>
-              <strong>Caution:</strong>
-              <%= produit.caution %>
-            </p>
 
-            <p>
-              <strong>Handle:</strong>
-              <%= produit.handle %>
-            </p>
+            Autres couleur(s) : 
+            <% same_reffrs_same_taille_others_couleurs(produit).each do |produit| %>
+              <%= produit.couleur.nom if produit.couleur %>
+            <% end %>
 
-            <p>
-              <strong>Reffrs:</strong>
-              <%= produit.reffrs %>
-            </p>
-
-            <p>
-              <strong>Fournisseur:</strong>
-              <%= produit.fournisseur_id %>
-            </p>
-          </div>
-          
-          <div class="col-4">
-            <p>
+            Autres taille(s) : 
+            <% same_reffrs_same_couleur_others_tailles(produit).each do |produit| %>
+              <%= produit.taille.nom if produit.taille %>
+            <% end %>
+  
+            <strong>Caution:</strong>
+            <%= produit.caution %>
+  
+            <strong>Handle:</strong>
+            <%= produit.handle %>
+  
+            <strong>Reffrs:</strong>
+            <%= produit.reffrs %>
+  
+            <strong>Fournisseur:</strong>
+            <%= produit.fournisseur_id %>
+  
               <strong>Quantite:</strong>
               <%= produit.quantite %>
-            </p>
 
-            <p>
               <strong>Dateachat:</strong>
               <%= produit.dateachat %>
             </p>
 
             <% if current_user.admin? %>
-              <p>
                 <strong>Prixachat:</strong>
                 <%= produit.prixachat %>
-              </p>
             <% end %>
-          </div>
 
-        </div>
       </div>
+
     </div>
   </div>
-
 </div>
