--- a/app/views/home_admin/_blocLarge.html.erb
+++ b/app/views/home_admin/_blocLarge.html.erb
@@ -20,6 +20,7 @@
 
         <%= options_supplementaires_link(couleurs_path, "fa-cubes", "Couleurs", "btn-outline-dark") %>
         <%= options_supplementaires_link(tailles_path, "fa-cubes", "Tailles", "btn-outline-dark") %>
+        <%= options_supplementaires_link(admin_parameters_path, "fa-screwdriver-wrench", "Parametres", "btn-outline-warning") %>
 
         <%# faire des regrouepents avc des menus deroulants par cat : ex parametre %>
 
