--- a/app/views/produits/_form.html.erb
+++ b/app/views/produits/_form.html.erb
@@ -34,12 +34,26 @@
         </div>
       </div>
 
+      <div class="input-group input-group mx-1 px-2">
+        <%= form.label :prixvente, "prix vente TTC", class: "input-group-text" %>
+        <%= form.number_field :prixvente, class: "form-control" %>
+      </div>
+
+      <div class="input-group input-group mx-1 px-2">
+        <%= form.label :prixlocation, "prix location TTC", class: "input-group-text" %>
+        <%= form.number_field :prixlocation, class: "form-control" %>
+      </div>
+
       <%= custom_form_elements(form, 
-        [:prixvente, :text_field], [:prixlocation, :text_field],
         [:description, :text_area], 
         [:handle, :text_field], [:reffrs, :text_field], [:quantite, :number_field],
-        [:fournisseur_id, :text_field], [:dateachat, :date_field], [:prixachat, :text_field]
+        [:fournisseur_id, :text_field], [:dateachat, :date_field]
       ) %>
+
+      <div class="input-group input-group mx-1 px-2">
+        <%= form.label :prixachat, "prix achat HT", class: "input-group-text" %>
+        <%= form.number_field :prixachat, class: "form-control" %>
+      </div>
 
       <div class="input-group mb-1">
         <%= form.label :image_principale, class:"input-group-text label-with-format" %>
