--- a/app/views/selection_produit/_produits_filtres.html.erb
+++ b/app/views/selection_produit/_produits_filtres.html.erb
@@ -1,29 +1,12 @@
 <div class="container-fluid p-2">
     <% if @produits.any? %>
         <% @produits.each do |produit| %>
-            <%= link_to selection_produit_path(produit: produit, article: @article), class: "text-decoration-none" do %>
-                <div class="card shadow-sm mb-3">
-                    <div class="row g-0">
-                        <div class="col-4">
-                              <%= image_tag(produit.default_image, class: "img-produit") %>
-                        </div>
-                        <div class="col-8 d-flex align-items-center">
-                            <div class="card-body">
-                                <h4 class="card-title"> <%= produit.full_name %> </h4>
-                                <p> <%= produit.description %></p>
-
-                                <%= badge_taille_produit(produit) %> 
-                                <%= badge_couleur_produit(produit) %> 
-
-                                <%= badge_prixlocation_produit(produit) %>
-                                <%= badge_prixvente_produit(produit) %>
-
-                                <p class="m-1 mt-3"><%= badge_disponibilite(produit) %> </p>
-
-                            </div>
-                        </div>
-                    </div>
-                </div>
+            <% if est_disponible(produit) %>
+                <%= link_to selection_produit_path(produit: produit, article: @article), class: "text-decoration-none" do %>
+                    <%= produit_selection(produit) %>
+                <% end %>
+            <% else %>
+                <%= produit_selection(produit) %>
             <% end %>
         <% end %>
     <% end %>
